# os-lab-5

./: .gitignore  CMakeLists.txt  README.md
include/: core.h  employee.h  logic.h
src/: Client.cpp  Server.cpp  core.cpp  logic.cpp
tests/: test_main.cpp
